# hashbidder

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
hashbidder/: bid_runner.py  braiins_client.py  client.py  config.py  formatting.py  hashvalue.py  main.py  mempool_client.py  ocean_client.py  target_hashrate.py  use_cases.py
hashbidder/cli/: __init__.py  config.py  main.py
hashbidder/cli/formatting/: bids.py  target.py
hashbidder/clients/: braiins.py
hashbidder/domain/: __init__.py  balance_check.py  bid_config.py  bid_history.py  bid_planning.py  bitcoin.py  block_height.py  block_subsidy.py  btc_address.py  hashrate.py  sats.py  sats_burn_rate.py  stratum_url.py  time_unit.py
hashbidder/services/: __init__.py  bid_runner.py
hashbidder/use_cases/: ping.py  set_bids.py  set_bids_target.py
tests/: conftest.py  test_cli.py  test_config.py  test_hashrate.py  test_stratum_url.py
tests/cli/: test_bids.py  test_cli.py  test_hashvalue.py  test_ocean_account_stats.py  test_ping.py  test_set_bids.py
tests/unit/: test_balance_check.py  test_bid_history.py  test_bid_planning.py  test_block_height.py  test_block_subsidy.py  test_braiins_client.py  test_btc_address.py  test_config.py  test_craft_all_possible_plans.py  test_execute.py  test_fake_client.py  test_formatting.py  test_formatting_hashvalue.py  test_formatting_ocean.py  test_hashrate.py  test_hashvalue.py  test_mempool_client.py  test_ocean_client.py  test_plan_reconciliation.py  test_reconcile.py  test_sats_burn_rate.py  test_select_best_plan.py  test_target_hashrate.py  test_use_cases_ocean.py  test_use_cases_set_bids_target.py
