[project]
name = "hashbidder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "D", "B", "SIM", "RUF", "PT", "S"]
ignore = ["D105"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"hashbidder/cli/main.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.importlinter]
root_packages = ["hashbidder"]

[[tool.importlinter.contracts]]
name = "Hexagonal layers"
type = "layers"
layers = [
    "hashbidder.cli",
    "hashbidder.use_cases",
    "hashbidder.services",
    "hashbidder.clients",
    "hashbidder.domain",
]

[[tool.importlinter.contracts]]
name = "Use cases are independent of each other"
type = "independence"
modules = [
    "hashbidder.use_cases.hashvalue",
    "hashbidder.use_cases.ocean",
    "hashbidder.use_cases.ping",
    "hashbidder.use_cases.set_bids",
    "hashbidder.use_cases.set_bids_target",
]

[[tool.importlinter.contracts]]
name = "Clients are independent of each other"
type = "independence"
modules = [
    "hashbidder.clients.braiins",
    "hashbidder.clients.mempool",
    "hashbidder.clients.ocean",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hypothesis>=6.151.11",
    "import-linter>=2.11",
    "mypy>=1.20.0",
    "pydeps>=3.0.3",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]

[project.scripts]
hashbidder = "hashbidder.cli.main:main"

